fix: three findings from part 1, and pin jsoup past GHSA-pmhh-3w7g-xqp8
T1-A01 - the API token now arrives. ApiTokenSource reads
$CREDENTIALS_DIRECTORY/api-token first, then the system property, then the
environment. The reference server hands the token over through
LoadCredentialEncrypted, and the whole point of that mechanism is where the
secret is not: not in the unit, not in the environment, not in ps aux. Proving
absence is half the argument; a card on the security view is the other half,
showing origin, length and a four-byte fingerprint. Never the value - a
screenshot of it would demonstrate exactly the mistake the mechanism prevents.
The same restraint applies to the log line.

T1-A03 - a failed setup no longer reads as a successful one. The log said
"Persisting initial administrator" before the write and was read afterwards as
if the write had happened; it now says "Attempting to persist". The catch
widened from RuntimeException to Throwable, because the failure that prompted
this was a java.lang.Error about jdk.internal.misc.Unsafe and slipped straight
past. SetupView guards the bootstrap call the same way and tells the user the
administrator was not created, instead of letting the error reach Vaadin's
default handler while the store believes an account exists. README gained a
runtime-requirements section: the two JVM flags live in .mvn/jvm.config, which
configures the Maven JVM and does not travel with the artifact.

T1-A06 - AppStoragePaths.baseDir() resolves property, environment, default, and
logs which of the three it used. Reading only the property meant an ignored
APP_STORAGE_DIR and a silent fall back to ./data, where the application finds an
empty store - which looks like data loss. Same fix as in the template project.

jsoup pinned to 1.23.1, above the 1.22.2 that flow-server resolves.
GHSA-pmhh-3w7g-xqp8 concerns Cleaner exposing markup with custom raw-text
elements. Worth noting for the record: the affected path is not reachable here.
Flow uses